--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   searxng:
-    image: docker.io/searxng/searxng:latest
+    image: hub.urlsa.us.kg/searxng/searxng:latest
     volumes:
       - ./searxng:/etc/searxng:rw
     ports:
@@ -8,6 +8,10 @@ services:
     networks:
       - perplexica-network
     restart: unless-stopped
+    environment:
+      - http_proxy=http://192.168.1.3:7890
+      - https_proxy=http://192.168.1.3:7890
+      - no_proxy=localhost,127.0.0.1
 
   perplexica-backend:
     build:
@@ -16,6 +20,9 @@ services:
     image: itzcrazykns1337/perplexica-backend:main
     environment:
       - SEARXNG_API_URL=http://searxng:8080
+      - http_proxy=http://192.168.1.3:7890
+      - https_proxy=http://192.168.1.3:7890
+      - no_proxy=localhost,127.0.0.1
     depends_on:
       - searxng
     ports:
@@ -45,6 +52,10 @@ services:
     networks:
       - perplexica-network
     restart: unless-stopped
+    environment:
+      - http_proxy=http://192.168.1.3:7890
+      - https_proxy=http://192.168.1.3:7890
+      - no_proxy=localhost,127.0.0.1
 
 networks:
   perplexica-network:
