--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,9 @@
     "format:write": "prettier . --write"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "antd": "^5.0.0",  
+    "@ant-design/icons": "^5.0.0",
     "@headlessui/react": "^2.2.0",
     "@icons-pack/react-simple-icons": "^9.4.0",
     "@langchain/openai": "^0.0.25",
