--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pdf-parse": "^1.1.1",
     "winston": "^3.13.0",
     "ws": "^8.17.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "redis": "^4.6.7"
   }
 }
